# ATM-North-Star

./: .gitignore  ATM-North-Star.pro  Atm.pro  CMakeLists.txt  README.md  ToDo  ToDo_List  gg  refill.cpp
application/: CMakeLists.txt  application.pro
application/application_launch/: launcher.cpp  launcher.h  main.cpp  mode_configurator.cpp  mode_configurator.h
application/atm_operations/: console_mode.cpp  console_mode.h  demo_mode.cpp  information_screen.h  user_registrator.cpp  user_registrator.h  user_statement.cpp
application/console_version/: console_mode.cpp  console_mode.h  initial_menu.h  quit_menu_handler.cpp  quit_menu_handler.h
application/data_processing/: menu_input_processor.cpp  menu_input_processor.h  user_input_processor.cpp  user_input_processor.h
application/docking_module/: initial_input.cpp  initial_input.h  launcher.cpp  main.cpp  menu_input_processor.cpp  menu_input_processor.h  messenger.cpp  messenger.h  mode_launcher.cpp  mode_launcher.h  mode_selector.cpp  mode_selector.h  selector.cpp  string_parser.cpp  string_parser.h
application/graphical_version/: graphical_splash_screen.cpp  graphical_splash_screen.h  main_widget.cpp  main_widget.h
application/gui_mode/: graphical_splash_screen.cpp  graphical_splash_screen.h  gui_mode.cpp  gui_mode.h
application/gui_presenter/: gui_presenter.h
application/interface_presenter/: cli_presenter.cpp  cli_presenter.h  console_presenter.cpp  console_presenter.h  gui_presenter.cpp  gui_presenter.h  main_widget.cpp  main_widget.h
application/mode_integration/: launcher.cpp  launcher.h  main.cpp  messenger.cpp  messenger.h  mode_configurator.cpp  mode_configurator.h  mode_selector.cpp  mode_selector.h
application/mode_merging/: launcher.cpp  launcher.h  main.cpp  messenger.cpp  messenger.h  mode_selector.cpp  mode_selector.h  selector.cpp  selector.h
application/mode_selection/: greeter.cpp  greeter.h  greeter_messenger.cpp  greeter_messenger.h  main.cpp  mode_selector.h
application/user_data/: atm_user.cpp  cash_operator.h  identification_data.h  user_identification_data_provider.h
application/user_input_validation/: quit_menu_handler.cpp  quit_menu_handler.h  user_input.h  user_input_processor.cpp  user_input_processor.h
lib_atm_model/: CMakeLists.txt  lib_atm_model.pro
lib_atm_model/atm_operations/: account_informator.cpp  account_informator.h  refill.cpp  user_registrator.cpp  user_registrator.h  user_statement.h  withdrawal.cpp  withdrawal.h
lib_atm_model/credit_calculator/: calculator.cpp  calculator.h  calculator_data_checker.cpp  calculator_data_checker.h  calculator_data_handler.cpp  calculator_data_handler.h  calculator_data_transformer.cpp  calculator_data_transformer.h  calculator_error_informer.cpp  calculator_error_informer.h  credit_data_bounder.cpp  credit_data_bounder.h  credit_data_limiter.cpp  credit_data_limiter.h  credit_payments_generator.cpp  credit_payments_generator.h  credit_table.cpp  credit_table.h
lib_atm_model/graphical_version/: main_widget.h
lib_atm_model/incoming_data_handling/: atm_registration_handler.cpp  atm_registration_handler.h  atm_registration_status.h  cash_operation_validator.cpp  cash_operation_validator.h  input_data_validator.cpp  input_data_validator.h  logon_inspector.cpp  logon_inspector.h  registration_data_length_standard.cpp  registration_data_length_standard.h  registration_inspector.cpp  registration_inspector.h  registration_status.h  string_transformer.cpp  user_data_converter.cpp  user_data_converter.h
lib_atm_model/incoming_data_processing/: authentication_standard.cpp  input_data_validator.h  logon_standard.cpp  logon_standard.h  logon_status.h
lib_atm_model/interaction/: atm_interactor.cpp  atm_interactor.h  registrator.cpp  registrator.h
lib_atm_model/interface_presenter/: base_interface_presenter.cpp  base_interface_presenter.h  process_reporter.cpp  process_reporter.h
lib_atm_model/user_data/: atm_user.cpp  atm_user.h  cash_data.cpp  credit_data.h  identification_data.cpp  identification_data.h
lib_cli/: CMakeLists.txt  lib_cli.pro
lib_cli/messengers/: account_messenger.cpp  account_messenger.h  application_messenger.cpp  application_messenger.h  authentication_messenger.cpp  authentication_messenger.h  credit_messenger.h  demo_user_messenger.cpp  demo_user_messenger.h  description_messenger.cpp  description_messenger.h  initial_messenger.cpp  initial_messenger.h  logon_messenger.cpp  logon_messenger.h  main_menu_messenger.cpp  main_menu_messenger.h  notice_messenger.cpp  notice_messenger.h  refill_messenger.cpp  refill_messenger.h  registration_messenger.cpp  registration_messenger.h  registration_status_messenger.cpp  registration_status_messenger.h  statement_messenger.cpp  statement_messenger.h  withdrawal_messenger.cpp  withdrawal_messenger.h
lib_cli/output/: console_editor.cpp  console_editor.h
lib_cli/output_configuration/: console_editor.cpp  file_writer.h  output_setup.h
lib_cli/system_dependencies/: linux_configurator.cpp  linux_configurator.h  win_32_configurator.cpp  win_32_configurator.h
lib_cli/user_input/: password_input_handler.h  user_input_handler.cpp  user_input_handler.h
lib_cli/user_input_handling/: cash_operation_validator.cpp  menu_input_handler.cpp  menu_input_handler.h  password_input_handler.cpp  password_input_handler.h  submenu_input_handler.cpp  submenu_input_handler.h  user_input_handler.cpp  user_input_handler.h
lib_cli/view_model/: console_account_informer.cpp  console_account_informer.h  console_account_menu.cpp  console_account_menu.h  console_cash_refill_manager.cpp  console_cash_refill_manager.h  console_credit_calculator_menu.cpp  console_credit_calculator_menu.h  console_credit_menu.cpp  console_credit_menu.h  console_demo_menu.cpp  console_demo_menu.h  console_description_menu.cpp  console_description_menu.h  console_initial_menu.cpp  console_initial_menu.h  console_login_menu.cpp  (+33 more)
lib_gui/: CMakeLists.txt  atm_resources.qrc  lib_gui.pro  main_form.cpp  main_form.h  main_form.ui  main_window_form.cpp  main_window_form.h  main_window_form.ui  running_text.h
(+1071 files in other folders)
